--- a/Resume.html
+++ b/Resume.html
@@ -109,12 +109,12 @@
             </div>
 
             <div>
-                <img src="imG/PYTHON.png" alt="">
+                <img src="img/PYTHON.png" alt="">
                 <h2>PYTHON programming language</h2>
             </div>
 
             <div>
-                <img src="imG/HTML.png" alt="">
+                <img src="img/HTML.png" alt="">
                 <h2>HTML programming language</h2>
             </div>
 
